# rust-ray-tracer

./: Cargo.toml  README.md  test.ppm
images/: corrected.ppm  corrected3.ppm  corrected4.ppm  dielectric.ppm  final.ppm  fuzz.ppm  large_depth.ppm  small_depth.ppm  sphere4.ppm  spheres.ppm  test.ppm  test2.ppm  test3.ppm  test4.ppm  zoomed_in.ppm  zoomed_in_blur.ppm  zoomed_out.ppm
src/: benchmark.rs  camera.rs  color.rs  hittable.rs  hittable_list.rs  image_formats.rs  lib.rs  main.rs  material.rs  ray.rs  render.rs  render_params.rs  scene.rs  sphere.rs  utilities.rs  vector.rs
